Changed welcome msg

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class=card>
       <H1>
-          I'm Matt: an aspiring developer and tech geek
+          Hello, I'm Matt: an aspiring developer and tech geek
       </H1>
       <img id="profile_pic" src="images/download.png" width="300px">
       <P>
@@ -58,6 +58,7 @@
         Follow me
       </H2>
       <Ul class="list-inline">
+        <Li><a href="https://github.com/roshaym" target="-blank"><i class="fa-brands fa-square-github fa-2x"></i></a></Li>
         <Li><a href="https://www.linkedin.com/in/mattroshay/" target="-blank"><i class="fa-brands fa-linkedin fa-2x"></i></a></Li>
         <Li><a href="https://www.instagram.com/mattroshay/" target="-blank"><i class="fa-brands fa-square-instagram fa-2x"></i></a></Li>
         <Li><a href="https://www.vimeo.com/roshaym/" target="-blank"><i class="fa-brands fa-vimeo fa-2x"></i></a></Li>
