added HTML and CSS for card in projects

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-  <!--Write your code below!-->
   <div class="container">
     <div class=card>
       <H1>
@@ -21,7 +20,7 @@
       </H1>
       <img id="profile_pic" src="images/download.png" width="300px">
       <P>
-        As a software developer in training, I am diligently learning to code, to acquire the necessary skills to tackle novel and exciting challenges in the tech world.
+        Having completed my training as a software developer, I am now eager to apply my skills and take on new and exciting challenges in the tech world. I’m actively looking for opportunities to contribute, learn, and grow in this dynamic field.
       </P>
       <a href="https://www.linkedin.com/in/mattroshay/" target="-blank">View my profile</a>
     </div>
@@ -29,8 +28,15 @@
       <H2>
         Projects
       </H2>
+      <div class="card-product">
+        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+        <div class="card-product-infos">
+          <h2>Product name</h2>
+          <p>Product description with <strong>relevant info</strong> only.</p>
+        </div>
+      </div>
       <P>
-        Stay tuned - I have a couple ideas I will be exploring imminently.
+        More to come imminently.
       </P>
     </div>
     <div class=card>
