--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
         Projects
       </H2>
       <div class="card-product">
-        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+        <img src="images/icon-512x512.png" />
         <div class="card-product-infos">
-          <h2>Product name</h2>
-          <p>Product description with <strong>relevant info</strong> only.</p>
+          <h2>MatchMeal</h2>
+          <p><strong>Make the most of what's in your kitchen</strong></p>
+          <p>MatchMeal is a smart recipe app that matches ingredients in your fridge with recipes you can cook immediately.</p>
+          <a href="https://www.matchmeal.eu/" target="-blank"><i class="fa-solid fa-globe fa-2x"></i></a>
         </div>
       </div>
       <P>
