--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h2>MatchMeal</h2>
           <p><strong>Make the most of what's in your kitchen</strong></p>
           <p>MatchMeal is a smart recipe app that matches ingredients in your fridge with recipes you can cook immediately.</p>
-          <a href="https://www.matchmeal.eu/" target="-blank"><i class="fa-solid fa-globe fa-2x"></i></a>
+          <a href="https://www.matchmeal.eu/" target="-blank"><i class="fa-solid fa-globe fa-2x"></i> Link </a>
         </div>
       </div>
       <P>
