made card clickable

--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@
       <H2>
         Projects
       </H2>
-      <div class="card-product">
+      <div class="card-product"><a href="https://www.matchmeal.eu/" target="-blank"></a>
         <img src="images/icon-512x512.png" />
         <div class="card-product-infos">
           <h2>MatchMeal</h2>
           <p><strong>Make the most of what's in your kitchen</strong></p>
           <p>MatchMeal is a smart recipe app that matches ingredients in your fridge with recipes you can cook immediately.</p>
-          <a href="https://www.matchmeal.eu/" target="-blank"><i class="fa-solid fa-globe fa-2x"></i> Link </a>
         </div>
       </div>
       <P>
