project card updates

--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
       <H2>
         Projects
       </H2>
-      <div class="card-product"><a href="https://www.matchmeal.eu/" target="-blank"></a>
-        <img src="images/icon-512x512.png" />
-        <div class="card-product-infos">
-          <h2>MatchMeal</h2>
-          <p><strong>Make the most of what's in your kitchen</strong></p>
-          <p>MatchMeal is a smart recipe app that matches ingredients in your fridge with recipes you can cook immediately.</p>
-        </div>
+      <div class="card-product">
+        <a href="https://www.matchmeal.eu/" target="-blank">
+          <img src="images/icon-512x512.png" />
+          <div class="card-product-infos">
+            <h2>MatchMeal</h2>
+            <p><strong>Make the most of what's in your kitchen</strong></p>
+            <p>MatchMeal is a smart recipe app that matches ingredients in your fridge with recipes you can cook immediately.</p>
+          </div>
+        </a>
       </div>
       <P>
         More to come imminently.
