--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="flex items-start gap-6 bg-white p-6 shadow rounded-xl">
         <img src="/images/generic_project.png" alt="Generic project" class="w-20 h-20 object-contain">
         <div>
-          <h3 class="text-xl font-semibold mb-1">Portfolio & Blog Platform</h3>
+          <h3 class="text-xl font-semibold mb-1">Portfolio & Blog Platform (in development)</h3>
           <p class="text-gray-700 mb-1">Responsive portfolio and blog platform built for an IT infrastructure professional.</p>
           <p class="text-sm text-gray-500 mb-2">Rails · Cloudinary · SCSS · Blog Editor</p>
         </div>
