changes path of pictures back to image folder

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
       <div class="flex items-start gap-6 bg-white p-6 shadow rounded-xl">
-        <img src="matchmeal.png" alt="MatchMeal logo" class="w-20 h-20 object-contain">
+        <img src="/images/matchmeal.png" alt="MatchMeal logo" class="w-20 h-20 object-contain">
         <div>
           <h3 class="text-xl font-semibold mb-1">MatchMeal</h3>
           <p class="text-gray-700 mb-1">A web/mobile app that helps users find recipes based on what’s already in their kitchen.</p>
@@ -60,7 +60,7 @@
 
 
       <div class="flex items-start gap-6 bg-white p-6 shadow rounded-xl">
-        <img src="generic_project.png" alt="Generic project" class="w-20 h-20 object-contain">
+        <img src="/images/generic_project.png" alt="Generic project" class="w-20 h-20 object-contain">
         <div>
           <h3 class="text-xl font-semibold mb-1">Portfolio & Blog Platform (in development)</h3>
           <p class="text-gray-700 mb-1">Responsive portfolio and blog platform built for an IT infrastructure professional.</p>
@@ -70,7 +70,7 @@
 
 
       <div class="flex items-start gap-6 bg-white p-6 shadow rounded-xl">
-        <img src="flatrent.png" alt="FlatRent logo" class="w-20 h-20 object-contain">
+        <img src="/images/flatrent.png" alt="FlatRent logo" class="w-20 h-20 object-contain">
         <div>
           <h3 class="text-xl font-semibold mb-1">FlatRent</h3>
           <p class="text-gray-700 mb-1">An Airbnb-style clone built with a team using Rails and JavaScript.</p>
